--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081800.md#1" title="美国加速与中共经济脱钩 建立新经济圈""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1148901571-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/2/n12078619.md#1" title="【瘟疫与中共】死亡名单中党员占大多数""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/02/generic-coronavirus-cdc-1-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/eyk232/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://eyk232.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12083043.md#1">大陆上市公司首季利润减53% 经济陷恶性循环</a><br>
-:clock8: <em>22分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082913.md#1">中共内部报告称面临六四后最恶劣国际形势</a><br>
-:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12083002.md#1">公安部整肃延烧香港 邓炳强涉僭建丑闻曝光</a><br>
-:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082518.md#1">美国会：中共及世卫均违反了世卫规则</a><br>
+:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082651.md#1">【新闻看点】战狼蠢动 川普蓬佩奥再提惩罚追责</a><br>
+:clock8: <em>17分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12083043.md#1">大陆上市公司首季利润减53% 经济陷恶性循环</a><br>
+:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082913.md#1">中共内部报告称面临六四后最恶劣国际形势</a><br>
+:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12083002.md#1">公安部整肃延烧香港 邓炳强涉僭建丑闻曝光</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082518.md#1">美国会：中共及世卫均违反了世卫规则</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12079010.md#1">【最新疫情5·4】全球疫情死亡人数超25万</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082779.md#1">自曝有抗体后出关 麦当娜参加好友生日会挨轰</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/2/n12078410.md#1">两会前“红二代”发信对掐？中南海博弈激烈</a><br>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12079946.md#1">中共四分钟歌曲激怒亚洲民众 20万人踩</a><br>
