--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -12,11 +12,10 @@
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/19/11/5/n11633808.md#1" target="_blank">这些症状当心甲状腺亢进  3方法与它和平共处</a><br></h3><a href="https://github.com/eyk232/djy/blob/master/gb/19/11/5/n11633808.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2019/11/Thyroid-hyperthyroidism-1103-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/19/3/29/n11149940.md#1" target="_blank">高血脂易引发心脏病和中风 2招天然降血脂</a><br></h3><a href="https://github.com/eyk232/djy/blob/master/gb/19/3/29/n11149940.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2019/04/Gaoxuezhi-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/19/3/29/n11149827.md#1" target="_blank">远离脑中风 吃对食物还不够！医师揭饮食关键</a><br></h3><a href="https://github.com/eyk232/djy/blob/master/gb/19/3/29/n11149827.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2019/03/naozhongfengyinshi-320x200.jpg"></a></td></tr>
+<tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082893.md#1" target="_blank">中共病毒在物体表面活多久？塑胶不锈钢可达7天</a><br></h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082893.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/05/e1a7671f3a1aba4c1b2f803ef3135ad9-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/2/n12078118.md#1" target="_blank">提升体温就增免疫力 简单3招让身体发热抗病毒</a><br></h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/2/n12078118.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/05/run-body-temperature_149417990-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/4/29/n12068829.md#1" target="_blank">敦睦舰队为何没成防疫缺口？2方法防再爆疫情</a><br></h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/4/29/n12068829.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/04/e850c277824ee7ef2920eebff1af87b5-320x200.jpg"></a></td></tr>
-<tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/4/25/n12059938.md#1" target="_blank">免疫力太强也不好？当心2大免疫疾病</a><br></h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/4/25/n12059938.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/04/immune-system-200425-320x200.jpg"></a></td></tr>
 <tr><td><h3><p><strong>饮食、生活、疾病、中医</strong></p></h3></td></tr><tr><td>
-<h3><a href="https://github.com/eyk232/djy/blob/master/gb/19/8/19/n11462395.md#1" target="_blank">多动症有哪些症状？儿童多动症常见14种表现</a><br></h3>
 <h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/4/18/n12041974.md#1" target="_blank">别再囤泡面了！利用苹果、纸巾 让蔬菜储存更久</a><br></h3>
 <h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/4/18/n12041997.md#1" target="_blank">蔬菜水果别生吃？6个饮食秘诀对抗白血病</a><br></h3>
 <h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/4/22/n12052778.md#1" target="_blank">不吃早餐更容易胖 有2个原因</a><br></h3>
@@ -31,5 +30,6 @@
 <h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/2/n12078408.md#1" target="_blank">【胡乃文开讲】按按耳朵 改善甲状腺功能 中医防治甲状腺肿大</a><br></h3>
 <h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/2/n12078567.md#1" target="_blank">前列腺癌是男性常见癌症 带你看懂筛检方法</a><br></h3>
 <h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082335.md#1" target="_blank">穿夹脚拖好不好？当心带来2大问题</a><br></h3>
+<h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082893.md#1" target="_blank">中共病毒在物体表面活多久？塑胶不锈钢可达7天</a><br></h3>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/nsc1002.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/nsc1002_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/nsc1002_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/nsc1002_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/nsc1002_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/nsc1002_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/nsc1002_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/nsc1002_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/nsc1002_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/nsc1002_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/nsc1002_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/eyk232/djy/blob/master/gb/nsc1002.md#1<br><a href="https://github.com/eyk232/djy/blob/master/gb/nsc1002.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/eyk232/djy/blob/master/gb/nsc1002.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc1002.htm">https://www.epochtimes.com/gb/nsc1002.htm</a>    （国内需<a href="https://github.com/eyk232/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</p>
